force-app/main/default/objects/Ride__c/Ride__c.object-meta.xml
<CustomObject>
    <description>Shows which ride requests are being undertaken by an employee.</description>
    <label>Ride</label>
    <nameField>
        <displayFormat>RIDE-{0000}</displayFormat>
        <label>Ride Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rides</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>