force-app/main/default/objects/Ride__c/fields/Driver_Email__c.field-meta.xml
<CustomField>
    <fullName>Driver_Email__c</fullName>
    <label>Driver Email</label>
    <type>Email</type>
</CustomField>