force-app/main/default/objects/Ride__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <label>Request</label>
    <referenceTo>Request__c</referenceTo>
    <relationshipLabel>Rides</relationshipLabel>
    <relationshipName>Rides</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>