force-app/main/default/objects/Ride__c/fields/Starting_Address__c.field-meta.xml
<CustomField>
    <fullName>Starting_Address__c</fullName>
    <label>Starting Address</label>
    <length>30</length>
    <type>Text</type>
</CustomField>