force-app/main/default/objects/Ride__c/fields/Starting_City__c.field-meta.xml
<CustomField>
    <fullName>Starting_City__c</fullName>
    <label>Starting City</label>
    <length>25</length>
    <type>Text</type>
</CustomField>