force-app/main/default/objects/Ride__c/recordTypes/All.recordType-meta.xml
<RecordType>
    <fullName>All</fullName>
    <active>true</active>
    <description>Displays all fields.</description>
    <label>All</label>
</RecordType>