force-app/main/default/objects/Ride__c/recordTypes/Basic_Trip_Info.recordType-meta.xml
<RecordType>
    <fullName>Basic_Trip_Info</fullName>
    <active>true</active>
    <description>Only displays destination and pickup location.</description>
    <label>Basic Trip Info</label>
</RecordType>